# Papildoma_uzduotis

./: .gitignore  CMakeLists.txt  README.md  main.cpp  run.bat
